# hologram-lab

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: good_first_issue.md
.github/scripts/: generate_weekly_hologram.py
.github/workflows/: README.md  ci.yml  weekly-hologram.yml
demos/: README.md
docs/: README.md  hologram.js  index.html  style.css  test-hologram.html  weekly-gallery.json
docs/assets/: README.md
docs/robotic-face-hologram/: README.md  face-hologram.js  index.html
docs/robotic-face-hologram/assets/: README.md
github-page-hologram/: README.md  index.html
hologram_lab/: __init__.py  cli.py
real-holograms/: README.md
resources/: README.md
robotic-face-hologram/: README.md  face-hologram.js  index.html
simulations/: README.md  fourier_hologram_demo.py  fresnel_hologram_example.py
simulations/tests/: __init__.py  test_fourier_hologram.py
